--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
+    "framer-motion": "^12.11.0",
     "next": "15.3.1",
     "next-sanity": "^9.10.6",
     "react": "^19.0.0",
